stop wrapper from moving page elements on small screen devices

--- a/src/modules/app/css/_app.scss
+++ b/src/modules/app/css/_app.scss
@@ -325,7 +325,6 @@ select-arrows{
 
   #page-content-wrapper {
       width: 100%;
-      position: absolute;
       padding: 0px;
   }
 
